@@ -14,7 +14,7 @@
 	</path>
 
 
-	<target name="compile" depends="init">
+	<target name="compile">
 		<javac
 			srcdir="."
 			deprecation="on"
